# kolada-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/kolada_mcp/: __init__.py  __main__.py  config.py  server.py
src/kolada_mcp/models/: __init__.py  types.py
src/kolada_mcp/services/: __init__.py  data_processing.py  embeddings.py  kolada_client.py
src/kolada_mcp/tools/: __init__.py  comparison.py  data.py  metadata.py  municipality.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_embeddings.py  test_kolada_client.py  test_models.py  test_tools.py
